# bash-inline

./: .gitignore  ChangeLog.md  LICENSE  Main.hs  README.md  bash-inline.cabal
app/: Main.hs
src/: Lib.hs
test/: Tests.hs  brace-expand.sh  brace-expand.sh.out  brace-expand.sh.out1  command-subst.sh  command-subst.sh.out1  cond-exec.sh  cond-exec.sh.out  cond.sh  cond.sh.out  func.sh  func.sh.out1  quotes.sh  quotes.sh.out  strict-mode.sh.out  vars.sh  vars.sh.out
