name:                bash-inline

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.1

synopsis:            Bash script inlining

-- A longer description of the package.
-- description:         

homepage:            https://github.com/emanuelbuholzer/bash-inline 
author:              Emanuel Buholzer
maintainer:          contact@emanuelbuholzer.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable bash-inline
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
                       OverloadedStrings
  build-depends:       base >=4.9 && <4.10,
                       language-bash == 0.8.0,
                       text-replace == 0.0.0.4,
                       optparse-applicative == 0.15.1.0,
                       parsec <= 3.1.11.0
  
