name:                bash-inline

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.0.0

synopsis:            Bash script formatting for inlining

description:         This program is a CLI tool to format Bash scripts for inlining.
                     It can also be used as a library.
                     For more information, see the README.md.

homepage:            https://github.com/emanuelbuholzer/bash-inline
author:              Emanuel Buholzer
maintainer:          emanuel0xb@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
license:             MIT
license-file:        LICENSE
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lib 
  build-depends:       base >=4.9 && <5,
                       language-bash == 0.8.0,
                       parsec >= 3.1.11.0,
                       pretty >= 1.1.3.6
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  
executable bash-inline 
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
                       OverloadedStrings
  build-depends:       base >=4.9 && <5,
                       optparse-applicative == 0.15.1.0,
                       bash-inline
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5,
                       directory,
                       bash-inline,
                       HUnit
  ghc-options:         -ferror-spans -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
